[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Levels/Level_1.gd" type="Script" id=1]
[ext_resource path="res://Assets/cursor.png" type="Texture" id=2]
[ext_resource path="res://Assets/Font/LapsusPro-Bold.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/circleNegative.png" type="Texture" id=4]
[ext_resource path="res://Assets/circlePositive.png" type="Texture" id=5]
[ext_resource path="res://Assets/bcgLvl1.png" type="Texture" id=6]
[ext_resource path="res://Assets/buttonToClick.png" type="Texture" id=7]
[ext_resource path="res://Assets/SFX/L1.ogg" type="AudioStream" id=8]
[ext_resource path="res://Scenes/FontSpeedLabel.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "moveCursor"
length = 14.0
tracks/0/type = "value"
tracks/0/path = NodePath("MouseCursor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.2, 5, 6, 7.4, 8.5, 10.5, 14 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -10, -100 ), Vector2( -10, -100 ), Vector2( 512, 448 ), Vector2( 512, 448 ), Vector2( 832, 128 ), Vector2( 832, 128 ), Vector2( 512, 448 ), Vector2( 512, 448 ) ]
}

[node name="Level_1" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )
centered = false

[node name="ButtonControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 1024.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ButtonControl"]
anchor_right = 1.0
margin_left = 96.0
margin_top = 80.0
margin_right = -96.0
margin_bottom = 312.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="PositiveButton" type="TextureButton" parent="."]
margin_left = 192.0
margin_top = 384.0
margin_right = 320.0
margin_bottom = 512.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NegativeButton" type="TextureButton" parent="."]
margin_left = 704.0
margin_top = 384.0
margin_right = 856.0
margin_bottom = 512.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 464.0
margin_top = 400.0
margin_right = 560.0
margin_bottom = 496.0
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseCursor" type="Sprite" parent="."]
position = Vector2( -10, -100 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/moveCursor = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="FontSpeedLabel" parent="." instance=ExtResource( 9 )]
position = Vector2( 744, 568 )
[connection signal="mouse_entered" from="PositiveButton" to="." method="_on_PositiveButton_mouse_entered"]
[connection signal="pressed" from="PositiveButton" to="." method="_on_PositiveButton_pressed"]
[connection signal="mouse_entered" from="NegativeButton" to="." method="_on_NegativeButton_mouse_entered"]
[connection signal="pressed" from="NegativeButton" to="." method="_on_NegativeButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
